Update Main.java
File can be now moved, instead of copied and a "history" file is created to track the new path. The content of the file will be used to update the currentPath so when the program is ran it doesn't show the relative path anymore.